--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "predev": "ts-node src/script/kill-port.js",
+    "dev": "nest start --watch",
+    "dev:force": "FORCE_KILL_PORT=true nest start --watch",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -39,9 +41,8 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cookie-parser": "^1.4.7",
+    "detect-port": "^2.1.0",
     "i": "^0.3.7",
-    "install": "^0.13.0",
-    "npm": "^11.4.2",
     "redis": "^5.5.6",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
@@ -60,13 +61,15 @@
     "@swc/core": "^1.10.7",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
-    "@types/node": "^22.10.7",
+    "@types/node": "^22.15.34",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
     "globals": "^16.0.0",
+    "install": "^0.13.0",
     "jest": "^29.7.0",
+    "npm": "^11.4.2",
     "prettier": "^3.4.2",
     "prisma": "^6.10.1",
     "source-map-support": "^0.5.21",
